# Outdoor-fire-station-project

./: README.md
src/Scout-LIO/Scout-LIO/config/: params.yaml
src/Scout-LIO/Scout-LIO/launch/: lio_debug.launch  run.launch
src/Scout-LIO/Scout-LIO/launch/include/: module_robot_state_publisher.launch
src/Scout-LIO/Scout-LIO/launch/include/config/: rviz.rviz
src/Scout-LIO/Scout-LIO/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  rs_to_velodyne.cpp
src/nmea_navsat_driverForGPGGA/: CMakeLists.txt
src/nmea_navsat_driverForGPGGA/launch/: gnss.launch  nmea_serial_driver.launch
src/nmea_navsat_driverForGPGGA/src/libnmea_navsat_driver/: driver.py  parser.py
src/nmea_navsat_driverForGPGGA/src/libnmea_navsat_driver/nodes/: __init__.py  nmea_serial_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py  parser_headinga.py
src/openzenros/launch/: openzen_lpms_ig1.launch
src/openzenros/openzen/: CMakeLists.txt
src/realsense-ros/realsense2_camera/launch/: vins_rs_camera.launch
src/scout_ros/scout_base/launch/: scout_base.launch  scout_mini_base.launch
src/scout_ros/scout_base/src/: scout_base_node.cpp  scout_messenger.cpp  speed.cpp
src/scout_ros/scout_bringup/launch/: scout_mini_minimal.launch
src/scout_ros/scout_description/urdf/: scout_v2.urdf  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
src/ugv_sdk/ugv_sdk/include/ugv_sdk/scout/: scout_types.hpp
src/ugv_sdk/wrp_io/: .gitlab-ci.yml  CMakeLists.txt  LICENSE
src/ugv_sdk/wrp_io/cmake/: wrp_ioConfig.cmake.in
src/ugv_sdk/wrp_io/include/wrp_io/: async_can.hpp  async_serial.hpp
src/ugv_sdk/wrp_io/src/: async_can.cpp  async_serial.cpp
src/ugv_sdk/wrp_io/test/: CMakeLists.txt
src/ugv_sdk/wrp_io/test/unit_tests/: ringbuf_test.cpp
src/zed-ros-wrapper/zed_wrapper/params/: common.yaml  zedm.yaml
